Formatted file names

--- a/introduction/0.install-aws-cli.md
+++ b/introduction/0.install-aws-cli.md
@@ -4,7 +4,9 @@
 
 Before installing the AWS CLI, you must have Python installed on your system. You can check if Python is installed by opening a terminal window and entering the following command:
 
-```python --version```
+   ```bash
+   python --version
+   ```
 
 If Python is not installed, you can download it from the official website: https://www.python.org/downloads/.
 
@@ -13,29 +15,41 @@ If Python is not installed, you can download it from the official website: https
 1. Download the AWS CLI installation package:
 
    For Linux and macOS:
-   ```curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"```
+   ```bash
+   curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+   ```
 
    For Windows:
-   ```Invoke-WebRequest -Uri https://awscli.amazonaws.com/AWSCLIV2.msi -OutFile AWSCLIV2.msi```
+   ```bash
+   Invoke-WebRequest -Uri https://awscli.amazonaws.com/AWSCLIV2.msi -OutFile AWSCLIV2.msi
+   ```
 
 2. Extract the contents of the zip file by entering the following command:
 
    For Linux and macOS:
-   ```unzip awscliv2.zip```
+   ```bash
+   unzip awscliv2.zip
+   ```
 
    For Windows, double-click the MSI file and follow the instructions to install the AWS CLI.
 
 3. Run the installation script by entering the following command:
 
    For Linux and macOS:
-   ```sudo ./aws/install```
+   ```bash
+   sudo ./aws/install
+   ```
 
    For Windows, open the Command Prompt or PowerShell and navigate to the folder where you downloaded the MSI file. Then, enter the following command:
-   ```msiexec.exe /i AWSCLIV2.msi```
+   ```bash
+   msiexec.exe /i AWSCLIV2.msi
+   ```
 
 4. Verify that the AWS CLI is installed correctly by entering the following command:
 
-   ```aws --version```
+   ```bash 
+   aws --version
+   ```
 
    This command should return the version number of the AWS CLI.
 
