Formatted CLI commands

--- a/introduction/1.deploy-ec2-using-aws-cli.md
+++ b/introduction/1.deploy-ec2-using-aws-cli.md
@@ -1,6 +1,6 @@
 # CLI command to create EC2 instance
 
-To create an EC2 instance using the AWS CLI, you can use the **run-instances** command. Here is an example:
+To create an EC2 instance using the AWS CLI, you can use the `run-instances` command. Here is an example:
 
     ```bash
     aws ec2 run-instances --region ap-southeast-1 --image-id ami-03f6a11788f8e319e --instance-type t2.micro --key-name aws-devops-ec2-access --security-group-ids sg-074cc48af6898208b  --subnet-id subnet-0d3ed57ca5e17e9da
