Updated dynamodb exercise to include sort key

--- a/module-aws-application-serices/dynamodb/cli/1.create-table.md
+++ b/module-aws-application-serices/dynamodb/cli/1.create-table.md
@@ -1,12 +1,12 @@
 # To create a DynamoDB table using the AWS CLI Command
 
-1. This command creates a DynamoDB table with a table name of my-table, a key schema consisting of a single hash key 'id', and a single attribute definition for the `id` attribute of type `S` (string). It also sets the provisioned throughput to `5 read capacity units` and `5 write capacity units`.
+1. This command creates a DynamoDB table with a table name of my-table, a key schema consisting of a hash key 'id', sort key 'timestamp' and a attribute definitions for the `id` attribute of type `S` (String) and `timestamp` attribute of type `N`(Number) It also sets the provisioned throughput to `5 read capacity units` and `5 write capacity units`.
 
     ```bash
     aws dynamodb create-table \
     --table-name my-table \
-    --attribute-definitions AttributeName=id,AttributeType=S \
-    --key-schema AttributeName=id,KeyType=HASH \
+    --attribute-definitions AttributeName=id,AttributeType=S AttributeName=timestamp,AttributeType=N \
+    --key-schema AttributeName=id,KeyType=HASH AttributeName=timestamp,KeyType=RANGE \
     --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5
     ```
 
