--- a/module-aws-application-serices/dynamodb/boto3/1.create-table.md
+++ b/module-aws-application-serices/dynamodb/boto3/1.create-table.md
@@ -9,10 +9,16 @@
     ```python
     dynamodb = boto3.client('dynamodb')
     table_name = 'my-table'
-    key_schema = [    {'AttributeName': 'id', 'KeyType': 'HASH'}]
-    attribute_definitions = [    {'AttributeName': 'id', 'AttributeType': 'S'}]
+    key_schema =  key_schema = [
+        {'AttributeName': 'id', 'KeyType': 'HASH'},
+        {'AttributeName': 'timestamp', 'KeyType': 'RANGE'}
+    ]
+    attribute_definitions = attribute_definitions = [
+        {'AttributeName': 'id', 'AttributeType': 'S'},
+        {'AttributeName': 'timestamp', 'AttributeType': 'N'}
+    ]
     ```
-    In this example, we define a simple key schema consisting of a single hash key 'id', and a single attribute definition for the 'id' attribute of type 'S' (string).
+    In this example, we define a simple key schema consisting of a single hash key 'id' and a range (sort) key 'timestamp'. We also define attribute definitions for both the 'id' and 'timestamp' attributes with types 'S' (string) and 'N' (number), respectively.
 
 3. Create the table:
     ```python
