Refactored introductions module setup and instructions

--- a/introduction/3.s3/1.create-s3-bucket-and-upload-file-using-cli.md
+++ b/introduction/3.s3/1.create-s3-bucket-and-upload-file-using-cli.md
@@ -5,7 +5,7 @@ To create an S3 bucket and upload files to it using the AWS CLI, you can use the
 1. Create a new S3 bucket using the `s3api` command. Update LocationConstraint to the region you want to create S3 bucket and replace `my-bucket-name` with the name you want to give to your bucket:
 
     ```bash
-    aws s3api create-bucket --bucket my-bucket-name --create-bucket-configuration LocationConstraint=ap-southeast-1
+    aws s3api create-bucket --bucket ug-test-bucket --create-bucket-configuration LocationConstraint=ap-southeast-1
     ```
 
 2. Upload a file to the S3 bucket using the `s3` command. Replace `file.txt` with the name of the file you want to upload, and replace `my-bucket-name` with the name of the bucket you created in step 1:
