Updated instructions to improve the clarity of delivery

--- a/introduction/1.prerequesites/1.install-aws-cli.md
+++ b/introduction/1.prerequesites/1.install-aws-cli.md
@@ -53,6 +53,14 @@ If Python is not installed, you can download it from the official website: https
 
    This command should return the version number of the AWS CLI.
 
+5. Once the AWS CLI is installed, you need to configure your AWS CLI credentials. These   credentials can be obtained from the AWS Event Engine platform, which will be provided to you at the time of the workshop
+   You can configure your AWS CLI credentials by entering the following command:
+
+   ```bash 
+   aws configure
+   ```
+
+
 ## Conclusion
 
 You have successfully installed the AWS CLI on your system. Now you can use it to interact with AWS services from the command line. For more information about using the AWS CLI, refer to the official documentation: https://aws.amazon.com/cli/.
