--- a/module-aws-application-serices/dynamodb/boto3/1.create-table.md
+++ b/module-aws-application-serices/dynamodb/boto3/1.create-table.md
@@ -10,15 +10,13 @@
     dynamodb = boto3.client('dynamodb')
     table_name = 'my-table'
     key_schema =  key_schema = [
-        {'AttributeName': 'id', 'KeyType': 'HASH'},
-        {'AttributeName': 'timestamp', 'KeyType': 'RANGE'}
+        {'AttributeName': 'id', 'KeyType': 'HASH'}
     ]
     attribute_definitions = attribute_definitions = [
-        {'AttributeName': 'id', 'AttributeType': 'S'},
-        {'AttributeName': 'timestamp', 'AttributeType': 'N'}
+        {'AttributeName': 'id', 'AttributeType': 'S'}
     ]
     ```
-    In this example, we define a simple key schema consisting of a single hash key 'id' and a range (sort) key 'timestamp'. We also define attribute definitions for both the 'id' and 'timestamp' attributes with types 'S' (string) and 'N' (number), respectively.
+    In this example, we've configured a basic key schema that includes a singular 'hash' key, identified as 'id'. Furthermore, we've characterized attribute definitions for the 'id' attribute, assigning it the type 'S' (string).
 
 3. Create the table:
     ```python
