--- a/module-aws-application-serices/dynamodb/cli/1.create-table.md
+++ b/module-aws-application-serices/dynamodb/cli/1.create-table.md
@@ -5,8 +5,8 @@
     ```bash
     aws dynamodb create-table \
     --table-name my-table \
-    --attribute-definitions AttributeName=id,AttributeType=S AttributeName=timestamp,AttributeType=N \
-    --key-schema AttributeName=id,KeyType=HASH AttributeName=timestamp,KeyType=RANGE \
+    --attribute-definitions AttributeName=id,AttributeType=S \
+    --key-schema AttributeName=id,KeyType=HASH \
     --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5
     ```
 
