Added instructions to launch cloudhell

--- a/introduction/1.prerequesites/1.install-aws-cli.md
+++ b/introduction/1.prerequesites/1.install-aws-cli.md
@@ -59,7 +59,10 @@ If Python is not installed, you can download it from the official website: https
    ```bash 
    aws configure
    ```
+   
+   You'll be prompted to input your AWS Access Key ID and AWS Secret Access Key, which you should have received from the AWS Event Engine platform.
 
+   For the 'Default region name', input 'ap-southeast-1'. And for 'Default output format', type 'json'.
 
 ## Conclusion
 
