Updated instructions to enhance clarity

--- a/introduction/1.prerequesites/local-dev/2.install-python-pip-boto3.md
+++ b/introduction/1.prerequesites/local-dev/2.install-python-pip-boto3.md
@@ -12,14 +12,21 @@ If Python is not installed, you can download it from the official website: https
 
 ## Installation steps
 
-1. Once you have confirmed that Python is installed, you can download the `get-pip.py` installation script by running the following command:
+1. Once you have confirmed that Python is installed, you can download the `get-pip.py` installation script. If your Python version is less than 3.7, use the following command:
+
+    ```bash
+    curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
+    ```
+
+    If your Python version is 3.7 or higher, use the following command:
 
     ```bash
     curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
     ```
-    
     If you don't have the `curl` installed, you can manually download the file `get-pip.py` from this link `https://bootstrap.pypa.io/get-pip.py` 
+
 2. Next, navigate to the directory where you downloaded the `get-pip.py` script in your terminal or command prompt.
+
 3. Run the following command to install `pip`
 
     ```bash
@@ -32,3 +39,14 @@ If Python is not installed, you can download it from the official website: https
     ```bash
     pip --version
     ```
+5. After successfully installing pip, you can install Boto3, the AWS SDK for Python, by running:
+
+    ```bash
+    pip install boto3
+    ```
+
+6. Once Boto3 has finished installing, you can verify that it was installed correctly by running the following command:
+
+    ```bash
+    python -c "import boto3; print(boto3.__version__)"
+    ```    
